@@ -492,7 +492,7 @@ static int fix_socket_list(struct socket_info **list)
 						 l->name.s, l->address_str.s);
 #endif
 				/* add the name to the alias list*/
-				if ((!(l->flags&& SI_IS_IP)) && (
+				if ((!(l->flags& SI_IS_IP)) && (
 						(l->name.len!=si->name.len)||
 						(strncmp(l->name.s, si->name.s, si->name.len)!=0))
 					)
